--- a/ContactList/src/App.css
+++ b/ContactList/src/App.css
@@ -1,42 +1,43 @@
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: rgb(8, 125, 157);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.details{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  background: hsl(194, 96%, 50%);
+  color: rgb(9, 9, 9);
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.contactlistfont{
+  font-size: 50px;
+  color: aqua;
 }
 
-.card {
-  padding: 2em;
+.list{
+  color: aqua;
 }
 
-.read-the-docs {
-  color: #888;
+.contactList{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.info{
+  display: flex;
+  gap:100px;
+  font-size: 20px;
+}
+
